Added Shopping Functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <app-header></app-header>
 <div class="container">
-    <app-recipes></app-recipes>
+    <router-outlet></router-outlet>
+    <!-- <app-recipes></app-recipes> -->
 <!-- <mat-tab-group>
     <mat-tab label="Recipes">
         <app-recipes></app-recipes>
