--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,10 +2,10 @@
     <span>Recipe Shopping Application</span>
     <ul style="list-style: none;">
       <li>
-        <a mat-button>Recipes</a>
+        <a mat-button routerLink="/">Recipes</a>
       </li>
       <li>
-        <a mat-button>Shopping List</a>
+        <a mat-button routerLink="/shopping">Shopping List</a>
       </li>
     </ul>
   
