--- a/src/app/components/shopping/shopping-list/shopping-list.component.html
+++ b/src/app/components/shopping/shopping-list/shopping-list.component.html
@@ -1,8 +1,18 @@
-<mat-list>
-    <mat-list-item>
-        <app-shopping-edit></app-shopping-edit>
-    </mat-list-item>
-    <mat-list-item>
-        <p>The Shopping List Items</p>
-    </mat-list-item>
-</mat-list>
+<div *ngIf="ingredientList && ingredientList.length>0">
+    <table mat-table [dataSource]="ingredientList" class="mat-elevation-z8">
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef>Name</th>
+            <td mat-cell *matCellDef="let elem">{{elem.name}}</td>
+        </ng-container>
+        <ng-container matColumnDef="amount">
+            <th mat-header-cell *matHeaderCellDef>Amount</th>
+            <td mat-cell *matCellDef="let elem">{{elem.amount}}</td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+</div>
+<div *ngIf="!ingredientList || (ingredientList && ingredientList.length===0)">
+    <span>No Ingredients in Shopping List..Start by creating one</span>
+</div>
+<button mat-raised-button color="primary" (click)="enableCreateIngredient()">Create</button>
